<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.blogspot.lifesider.myapplication.inputfuel">

    <LinearLayout
        android:layout_width="236dp"
        android:layout_height="325dp"
        android:layout_marginEnd="98dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fueltittletext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fuel"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/efuelout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/out"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/predf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickPred"
            android:text="@string/predfs" />

        <Button
            android:id="@+id/sbrosfuelbutt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClicksbrosfuel"
            android:text="@string/sbrospredfs" />

        <EditText
            android:id="@+id/efuelazs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/azs"
            android:inputType="numberDecimal"
            android:textAlignment="textStart"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:onClick="onClick"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
